Fix Header Overflow

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ body {
 
 .container2 {
   display: flex;
-  flex-basis: 200;
 }
 
 #title {
@@ -44,10 +43,10 @@ body {
 }
 
 #trapezoid1 {
-  min-width: 100%;
+  max-width: 100%;
   position: absolute;
   top: 0px;
-  width: 1000px;
+  width: 10000px;
   height: 150px;
   background: #040a44;
   flex: (1000, 50);
@@ -63,6 +62,7 @@ body {
 }
 
 .headerTrapezoid {
+  max-width: 100%;
   flex: (1000, 50);
   width: 10000px;
   height: 300px;
